# custom-engine

./: .gitignore  CMakeLists.txt  todo.txt
includes/glad/: glad.c  glad.h
src/: main.cpp
src/assets/meshes/complex/: dog.mtl  house.mtl  multi_material.mtl  multi_mesh_material.mtl
src/assets/shaders/: default.frag  default.vert  gouraud.frag  gouraud.vert  phong.frag  phong.vert
src/core/: Camera.cpp  Camera.h  Engine.cpp  Engine.h  Logger.h  Material.h  Mesh.h  RenderableObject.cpp  RenderableObject.h  Shader.cpp  Shader.h  Texture.h  Transform.h  Window.cpp  Window.h
src/core/math/: Transform.cpp
src/core/rendering/: Camera.cpp  Camera.h  Color.h  Material.h  Mesh.h  Model.h  RenderableObject.cpp  RenderableObject.h  Renderer.h  Shader.cpp  Shader.h  Texture.h  Vertex.h
src/core/util/: CacheStore.h  MtlLoader.h  ObjLoader.h
src/editor/: EditorCamera.cpp  EditorCamera.h
src/math/: Transform.cpp  Transform.h
src/nodecomponents/: Node.cpp  Node.h  Node3D.cpp  Node3D.h  NodeComponent.h
src/nodecomponents/components/: ModelComponent.cpp  ModelComponent.h  TransformComponent.cpp  TransformComponent.h
src/primitives/: Primitives.h  Sphere.h  Square.h
src/prototypes/: Square.h
